--- a/practica2/practica2.qsf
+++ b/practica2/practica2.qsf
@@ -60,33 +60,6 @@ set_global_assignment -name BDF_FILE practica2.bdf
 set_global_assignment -name VHDL_FILE mux_4_to_1.vhd
 set_global_assignment -name VHDL_FILE bcd_to_7_segment.vhd
 set_location_assignment PIN_R8 -to clk
-set_location_assignment PIN_F13 -to led_1
-set_location_assignment PIN_T15 -to led_2
-set_location_assignment PIN_T13 -to led_3
-set_location_assignment PIN_T12 -to led_4
-set_location_assignment PIN_T10 -to dip_1[0]
-set_location_assignment PIN_R11 -to dip_1[1]
-set_location_assignment PIN_P11 -to dip_1[2]
-set_location_assignment PIN_R10 -to dip_1[3]
-set_location_assignment PIN_N12 -to dip_2[0]
-set_location_assignment PIN_P9 -to dip_2[1]
-set_location_assignment PIN_N9 -to dip_2[2]
-set_location_assignment PIN_N11 -to dip_2[3]
-set_location_assignment PIN_L16 -to dip_3[0]
-set_location_assignment PIN_K16 -to dip_3[1]
-set_location_assignment PIN_R16 -to dip_3[2]
-set_location_assignment PIN_L15 -to dip_3[3]
-set_location_assignment PIN_P15 -to dip_4[0]
-set_location_assignment PIN_P16 -to dip_4[1]
-set_location_assignment PIN_R14 -to dip_4[2]
-set_location_assignment PIN_N16 -to dip_4[3]
-set_location_assignment PIN_E8 -to bcd_to_7[6]
-set_location_assignment PIN_E7 -to bcd_to_7[5]
-set_location_assignment PIN_C8 -to bcd_to_7[4]
-set_location_assignment PIN_A7 -to bcd_to_7[3]
-set_location_assignment PIN_B7 -to bcd_to_7[2]
-set_location_assignment PIN_B6 -to bcd_to_7[1]
-set_location_assignment PIN_A5 -to bcd_to_7[0]
 set_global_assignment -name VHDL_FILE practica3.vhd
 set_global_assignment -name VHDL_FILE arithmetic_circuit.vhd
 set_global_assignment -name VHDL_FILE binary_to_bcd.vhd
@@ -94,4 +67,38 @@ set_global_assignment -name VHDL_FILE binary_to_bcd_digit.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
+set_location_assignment PIN_F13 -to act_dis1
+set_location_assignment PIN_T15 -to act_dis2
+set_location_assignment PIN_T13 -to act_dis3
+set_location_assignment PIN_T12 -to act_dis4
+set_location_assignment PIN_E8 -to display[6]
+set_location_assignment PIN_E7 -to display[5]
+set_location_assignment PIN_C8 -to display[4]
+set_location_assignment PIN_A7 -to display[3]
+set_location_assignment PIN_B7 -to display[2]
+set_location_assignment PIN_B6 -to display[1]
+set_location_assignment PIN_A5 -to display[0]
+set_location_assignment PIN_T10 -to I_0[0]
+set_location_assignment PIN_R11 -to I_0[1]
+set_location_assignment PIN_P11 -to I_0[2]
+set_location_assignment PIN_R10 -to I_0[3]
+set_location_assignment PIN_N12 -to I_1[0]
+set_location_assignment PIN_P9 -to I_1[1]
+set_location_assignment PIN_N9 -to I_1[2]
+set_location_assignment PIN_N11 -to I_1[3]
+set_location_assignment PIN_L16 -to I_2[0]
+set_location_assignment PIN_K16 -to I_2[1]
+set_location_assignment PIN_R16 -to I_2[2]
+set_location_assignment PIN_L15 -to I_2[3]
+set_location_assignment PIN_P15 -to I_3[0]
+set_location_assignment PIN_P16 -to I_3[1]
+set_location_assignment PIN_R14 -to I_3[2]
+set_location_assignment PIN_N16 -to I_3[3]
+set_location_assignment PIN_B9 -to Oper[2]
+set_location_assignment PIN_T8 -to Oper[1]
+set_location_assignment PIN_M1 -to Oper[0]
+set_location_assignment PIN_B13 -to oper_led[2]
+set_location_assignment PIN_A13 -to oper_led[1]
+set_location_assignment PIN_A15 -to oper_led[0]
+set_location_assignment PIN_A11 -to C_out
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
