--- a/practica7/practica2.qsf
+++ b/practica7/practica2.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE22F17C6
-set_global_assignment -name TOP_LEVEL_ENTITY program_counter
+set_global_assignment -name TOP_LEVEL_ENTITY instruction_memory
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "08:51:45  AGOSTO 31, 2018"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.0.0 Lite Edition"
@@ -111,7 +111,10 @@ set_global_assignment -name VHDL_FILE branch_control.vhd
 set_global_assignment -name VHDL_FILE zero_fill.vhd
 set_global_assignment -name VHDL_FILE extend.vhd
 set_global_assignment -name VHDL_FILE program_counter.vhd
+set_global_assignment -name VHDL_FILE instruction_decoder.vhd
+set_global_assignment -name VHDL_FILE instruction_memory.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE practica_final.vhd
